# pyfbsdk-stub-generator

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dev_generate.py  generate-stubs.bat  generate_motionbuilder_stubs.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
dev/: generate.py  generate_all_versions.py
generated-stub-files/motionbuilder-2022/: callbackframework.pyi  pyfbsdk.py  pyfbsdk.pyi  pyfbsdk_additions.py  pyfbsdk_additions.pyi
generated-stub-files/motionbuilder-2023/: callbackframework.pyi  pyfbsdk.pyi  pyfbsdk_additions.pyi
generated-stub-files/motionbuilder-2024/: callbackframework.pyi  pyfbsdk.pyi  pyfbsdk_additions.pyi
generated-stub-files/motionbuilder-2025/: callbackframework.pyi  pyfbsdk.pyi  pyfbsdk_additions.pyi
generated-stub-files/motionbuilder-2026/: callbackframework.pyi  pyfbsdk.pyi  pyfbsdk_additions.pyi  pyfbstandalone.pyi
generated-stub-files/motionbuilder-2027/: callbackframework.pyi  pyfbsdk.pyi  pyfbsdk_additions.pyi  pyfbstandalone.pyi  pyfbusd.pyi
generator/: motionbuilder_documentation_parser.py  motionbuilder_documentation_parser_2010.py  pyfbsdk-stub-generator.py  pyfbsdk_stub_generator.py
mobu_stub_generator/: additions_pyfbsdk.py  additions_pyfbsdk_additions.py  motionbuilder_documentation_parser.py  stub_generator.py  stub_generator_v2.py
motionbuilder-stubs/: LICENSE  README.md  copy_stubs.py  pyproject.toml
package-tools/: README.md  package.bat  publish.bat
pyfbsdk-stub-generator/: LICENSE  README.md  pyproject.toml  requirements.txt
pyfbsdk-stub-generator/src/: __init__.py  __main__.py  flags.py  module_types.py  native_generator.py  stub_generator.py
pyfbsdk-stub-generator/src/base_content/: __init__.py  pyfbsdk.pyi  pyfbusd.pyi
pyfbsdk-stub-generator/src/manual_stubs/: __init__.py  callbackframework.pyi  pyfbstandalone.pyi
pyfbsdk-stub-generator/src/plugins/: __init__.py  plugin_base.py
pyfbsdk-stub-generator/src/plugins/deprecated/: plugin_deprecated.py
pyfbsdk-stub-generator/src/plugins/dunder_methods/: plugin_dunder_methods.py
pyfbsdk-stub-generator/src/plugins/enum/: plugin_enum.py
pyfbsdk-stub-generator/src/plugins/events/: plugin_events.py
pyfbsdk-stub-generator/src/plugins/fb_property/: plugin_fbproperty.py
pyfbsdk-stub-generator/src/plugins/manual_documentation/: base.py  plugin_manual_docs.py
pyfbsdk-stub-generator/src/plugins/manual_documentation/modules/: pyfbsdk.py  pyfbusd.py
pyfbsdk-stub-generator/src/plugins/online_documentation/: plugin_online_documentation.py
pyfbsdk-stub-generator/src/plugins/online_documentation/documentation_scraper/: __init__.py  convert_docstrings.py  documentation.py  page_parser.py  parser.py  requests_cache.py  table_of_contents.py  utils.py
pyfbsdk-stub-generator/src/plugins/pyfbsdk_imports/: plugins_pyfbsdk_imports.py
pyfbsdk-stub-generator/src/plugins/readonly_properties/: plugin_readonly.py
pyfbsdk_stub_generator/: __init__.py  additions_pyfbsdk.py  manual_documentation.py  module_types.py  motionbuilder_documentation_parser.py  native_generator.py  stub_generator.py
pyfbsdk_stub_generator/base_content/: pyfbsdk.pyi
pyfbsdk_stub_generator/documentation_scraper/: page_parser.py  table_of_contents.py
pyfbsdk_stub_generator/manual_stubs/: callbackframework.pyi  pyfbsdk_additions.pyi
pyfbsdk_stub_generator/plugins/: __init__.py  plugin.py
pyfbsdk_stub_generator/plugins/dunder_methods/: dunder_methods.py  plugin_dunder_methods.py
pyfbsdk_stub_generator/plugins/enum/: enum_plugin.py
pyfbsdk_stub_generator/plugins/events/: plugin_events.py
pyfbsdk_stub_generator/plugins/fb_property/: fb_property_plugin.py
pyfbsdk_stub_generator/plugins/manual_documentation/: __init__.py  doc_bases.py  plugin_manual_docs.py
pyfbsdk_stub_generator/plugins/manual_documentation/modules/: pyfbsdk.py
pyfbsdk_stub_generator/plugins/online_documentation/: __init__.py  plugin_online_documentation.py
pyfbsdk_stub_generator/plugins/online_documentation/documentation_scraper/: documentation_cache.py  documentation_urls.py  page_parser.py  table_of_contents.py
