[project]
name = "pyfbsdk-stub-generator"
version = "2026.0.0"
authors = [{ name = "Nils Soderman" }]
description = "Generate pyfbsdk stub files for better intellisense when working with MotionBuilder"
keywords = [
    "pyfbsdk",
    "motionbuilder",
    "mobu",
    "autodesk",
    "stub",
    "stubfile",
    "generator",
    "gen",
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = ['Programming Language :: Python :: 3']
dependencies = [
    "beautifulsoup4==4.12.3",
    "markdownify==0.12.1",
    "requests>=2.32.0",
    "Js2Py~=0.74",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["dev", "generated-stub-files"]
