[metadata]
name = pyfbsdk-stub-generator
version = 2025.0.0
author = Nils Soderman
description = Generate pyfbsdk stub files for better intellisense when working with MotionBuilder
license = MIT-0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nils-soderman/pyfbsdk-stub-generator
keywords = pyfbsdk, motionbuilder, mobu, autodesk, stub, stubfile, generator, gen
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    beautifulsoup4
    markdownify
    requests
    Js2Py

[options.package_data]
* = *.pyi