[project]
name = "pyfbsdk-stub-generator"
version = "2026.1.0"
authors = [{ name = "Nils Soderman" }]
description = "Generate stub files for pyfbsdk"
keywords = [
    "pyfbsdk",
    "motionbuilder",
    "mobu",
    "autodesk",
    "stub",
    "stubfile",
    "generator",
    "gen",
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    'Programming Language :: Python :: 3',
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "markdownify==0.14.1",
    "requests>=2.32.0",
    "Js2Py~=0.74",
]

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/*"]
sources = { src = "pyfbsdk_stub_generator" }
