[project]
name = "pyfbsdk-stub-generator"
version = "2026.1.1"
authors = [{ name = "Nils Soderman" }]
description = "Generate stub files for pyfbsdk"
keywords = [
    "pyfbsdk",
    "motionbuilder",
    "mobu",
    "autodesk",
    "stub",
    "stubfile",
    "generator",
    "gen",
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    'Programming Language :: Python :: 3',
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[build-system]
requires = ["hatchling >= 1.27", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/*"]
sources = { src = "pyfbsdk_stub_generator" }
